--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "^1.0",
-        "twig/twig": "~2.0"
+        "rcrowe/twigbridge": "^0.9.5"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
